    * support for TrueHD in Blu-ray streams in libmpdemux
    * more Blu-ray codec support with lavf
    * fix length in ASF/WMV files
    * support ISDB-Tb DVB streams

    Filters:
    * remove vf_yuy2, functionality is replaced by -vf format=yuv2
    * remove vf_rgb2bgr, functionality is replaced by sws and vf_format

    Drivers:
    * -vo yuv4mpeg:interlaced no longer does its own interlaced RGB->YUV
      conversion. Use -vf scale=::1 to keep the same behavior and report
      if there are any issues with that.
    * X11: Window manager chooses Window position by default.
      Add geometry=50%:50% to your configuration to get the old behavior.
    * -vo md5sum md5 calculation changed so output matches FFmpeg's -f framemd5
    * Support for more formats in OpenGL video output drivers (different YUV
      subsampling, 16 bit per component)
    * Selectable YUV to RGB conversion standard for -vo gl
      (-vo gl:colorspace=...:levelconv=...)
    * -vo gl now tries to use yuv=2 by default if possible
    * -vo matrixview finally added
    * add OS/2 KAI audio driver (-ao kai)

    Other:
    * -nosub option for disabling auto-selected subtitles
    * support for displaying subs in the terminal (FIXME)
    * support for subtitles with audio-only files
    * support for right-to-left languages with embedded subtitles
    * support for UTF-16 encoded external subtitles
    * support for 8 channel audio
    * sync dvd:// and dvdnav:// features
    * support for MPEG-4 ASP in VDPAU video output (non-B-frame only)
    * support for live and non-live DVB teletext with demuxer lavf
    * -name, -title and -use-filename-title options for MPlayer
    * support for stream handling via FFmpeg, in particular RTMP and RTSP
      (use e.g. ffmpeg://http://example.com/test)
    * experimental support for external libass, configure with
      --disable-ass-internal
    * better support for 16-bit-per-component formats and formats
      with alpha channel