@@ -51,6 +51,7 @@
 #define STREAMTYPE_TV 17
 #define STREAMTYPE_MF 18
 #define STREAMTYPE_RADIO 19
+#define STREAMTYPE_BLURAY 20
 
 #define STREAM_BUFFER_SIZE 2048
 
@@ -330,6 +331,8 @@ void stream_set_interrupt_callback(int (*cb)(int));
 /// wait for time milliseconds
 int stream_check_interrupt(int time);
 
+extern int bluray_angle;
+extern int bluray_chapter;
 extern int dvd_speed;
 extern int dvd_title;
 extern int dvd_chapter;
@@ -337,6 +340,7 @@ extern int dvd_last_chapter;
 extern int dvd_angle;
 extern int vcd_track;
 
+extern char *bluray_device;
 extern char * audio_stream;
 extern char *cdrom_device;
 extern char *dvd_device;
