@@ -41,6 +41,10 @@ MPlayer (1.0)
     * remove vf_yuy2, functionality is replaced by -vf format=yuv2
     * remove vf_rgb2bgr, functionality is replaced by sws and vf_format
 
+    Streaming:
+    * Support for unencrypted Blu-ray playback through libbluray.
+      Use it through: mplayer br:////path/to/disc
+
     Drivers:
     * -vo yuv4mpeg:interlaced no longer does its own interlaced RGB->YUV
       conversion. Use -vf scale=::1 to keep the same behavior and report
